--- a/glamyze/templates/user/blank_layout.html
+++ b/glamyze/templates/user/blank_layout.html
@@ -77,11 +77,11 @@
 
 
 							<li {% block active3 %} {% endblock %}>
-								<a href="about.html">About</a>
+								<a href="{% url 'auth_app:about' %}">About</a>
 							</li>
 
 							<li {% block active4 %} {% endblock %}>
-								<a href="contact.html">Contact</a>
+								<a href="{% url 'auth_app:contact' %}">Contact</a>
 							</li>
 							
 							<li>
