--- a/glamyze/templates/user/summary.html
+++ b/glamyze/templates/user/summary.html
@@ -93,6 +93,19 @@
                             </div>
                         </div>
                     {% endif %}
+                    
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="size-208">
+                            <span class="mtext-101 cl2">
+                                Delivery Charge:
+                            </span>
+                        </div>
+                        <div class="size-209">
+                            <span class="mtext-110 cl2 font-weight-bold">
+                                +₹40
+                            </span>
+                        </div>
+                    </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="size-208">
                             <span class="mtext-101 cl2">
