--- a/glamyze/templates/my_admin/order_detail.html
+++ b/glamyze/templates/my_admin/order_detail.html
@@ -47,7 +47,7 @@
                 {% endif %}
             </p>
             {% if order.coupon %}
-            <p><strong>Coupon:</strong> ₹-{{ order.coupon.discount_amount }}->{{order.coupon.code}}</p>
+            <p><strong>Coupon:</strong> ₹-{{ order.get_coupon_discount }}->{{order.coupon.code}}</p>
             {% endif %}
             <p><strong>Total Amount:</strong> ₹{{ order.total_amount }}</p>
         </div>
@@ -75,7 +75,7 @@
                     <th scope="col">Quantity</th>
                     <th scope="col">Price</th>
                     <th scope="col">Total</th>
-                     {% if has_pending_return %}
+                     {% if has_return %}
                      <th>Return</th>
                      {% else %}
                      <th></th>
@@ -93,6 +93,7 @@
                         <p>₹{{ item.offer_price }}</p>
                         {% endif %}</td>
                     <td>₹{{ item.total_price }}</td>
+                    {% if has_return %}
                     {% if item.orderreturn.status == 'REQUESTED' %}
                      <td><span>{{item.orderreturn.return_reason}}-</span><a href="{% url 'order_management:order_return_approve' item.id %}" class="btn btn-primary mx-2">Approve</a><a href="{% url 'order_management:order_return_reject' item.id %}" class="btn btn-outline-primary">Reject</a></td>
                      
@@ -103,6 +104,7 @@
                 {% else %}
                 <td><span>No request</span></td>
             {% endif %}
+            {% endif %}
                 </tr>
                 {% endfor %}
                 {% if order.coupon %}
@@ -110,7 +112,7 @@
                     <td></td>
                     <td></td>
                     <td class="text-right">Coupon Amount</td>
-                    <td>-₹{{ order.coupon.discount_amount }}</td>
+                    <td>-₹{{ order.get_coupon_discount }}</td>
                 </tr>
                 {% endif %}
                 <tr>
