--- a/glamyze/templates/user/order_details.html
+++ b/glamyze/templates/user/order_details.html
@@ -146,7 +146,7 @@
                     {% if order.coupon %}
                     <tr>
                         <td colspan="4" class="text-right"><strong>Coupon: {{ order.coupon.code }} :</strong></td>
-                        <td class="text-right"><strong>₹-{{ order.coupon.discount_amount }}</strong></td>
+                        <td class="text-right"><strong>-₹{{ order.get_coupon_discount }}</strong></td>
                     </tr>
                     {% endif %}
                     <tr>
