--- a/glamyze/templates/user/blank_layout.html
+++ b/glamyze/templates/user/blank_layout.html
@@ -47,7 +47,7 @@
 			<div class="top-bar">
 				<div class="content-topbar flex-sb-m h-full container">
 					<div class="left-top-bar">
-						Free shipping all over india
+						Shipping all over india
 					</div>
 
 					
@@ -97,13 +97,13 @@
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
 					
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="0">
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="{{ total_items }}">
 							<a style="color: black;" href="{% url 'cart_app:cart_view' %}"><i class="zmdi zmdi-shopping-cart"></i></a>
 						</div>
-
-						<a href="{% url 'wishlist_app:wishlist_view' %}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+						<a href="{% url 'wishlist_app:wishlist_view' %}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="{{ wishlist_total_items }}">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
+					</div>
 						<a href="{% url 'address_app:account_management' %}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
 							<i class="zmdi zmdi-account"></i> 
 						</a>
