--- a/glamyze/templates/user/home_page_layout.html
+++ b/glamyze/templates/user/home_page_layout.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section class="bg0 p-t-23 p-b-140">
+<section class="bg0 p-t-23 p-b-140" style="margin: 70px;">
 <div class="container">
 			<div class="p-b-10">
 				<h3 class="ltext-103 cl5 mb-5">
@@ -10,7 +10,7 @@
 
 			<div class="row isotope-grid">
                 
-				{% include 'user/product_list.html' with products=products %}
+				{% include 'user/product_list.html' %}
 			
 
 			</div>
